Fixing text overflow to ellipses

--- a/styles.css
+++ b/styles.css
@@ -703,6 +703,11 @@ Binance Academy
     font-size:1.4rem;
     font-weight:500;
 }
+@media screen and (max-width:768px){
+    .popular-cryptocurrencies__title div span{
+        display:none;
+    }
+}
 .popular-cryptocurrencies__content--item{
     grid-template-columns: 2fr 1fr 1fr 1fr;
     display:grid;
@@ -710,18 +715,32 @@ Binance Academy
     padding: 2rem 0;
     color:#707A8A;
 }
-.popular-cryptocurrencies__content--item > span:not(:first-child, :last-child){
+@media screen and (max-width:768px){
+    .popular-cryptocurrencies__content--item{
+        grid-template-columns: 2.5fr 1fr 1fr;
+    }
+    .popular-cryptocurrencies__content--item > div{
+        font-size:1.3rem;
+    }
+}
+.popular-cryptocurrencies__content--item > div:not(:first-child, :last-child){
     display:flex;
     justify-content:center;
 }
-.popular-cryptocurrencies__content--item > span:last-child{
+.popular-cryptocurrencies__content--item > div:last-child{
     display:flex;
     justify-content:right; 
 }
+@media screen and (max-width:768px){
+    .popular-cryptocurrencies__content--item > div:nth-child(2){
+        display:flex;
+        justify-content:right; 
+    }
+}
 .popular-cryptocurrencies__content--item__data{
     padding:1.5rem 1.5rem;
-    margin-left:-1%;
-    margin-right: -1%;
+    margin-left:-1.5rem;
+    margin-right: -1.5rem;
     border-radius: 4px;
 }
 .popular-cryptocurrencies__content--item__data:hover{
@@ -730,18 +749,42 @@ Binance Academy
 .popular-cryptocurrencies__content--item__data > div{
     display:flex;
     align-items: center;
+    flex-basis: 50%;
+    min-width:0;
 }
 .popular-cryptocurrencies__content--item__data > div > img{
     height: 3.2rem;
     width:3.2rem;
 }
+@media screen and (max-width:768px){
+    .popular-cryptocurrencies__content--item__data > div > img{
+        height: 2.5rem;
+        width:2.5rem;
+    }
+}
 .popular-cryptocurrencies__content--item__data > div > h2{
     font-weight:600;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     color:#1E2329;
     padding-left: 1.5rem;
     padding-right: .8rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 .popular-cryptocurrencies__content--item__data > div > span{
     font-size:1.4rem;
+}
+@media screen and (max-width:768px){
+    .popular-cryptocurrencies__content--item > div:nth-child(3){
+        display:none;
+    }
+    .popular-cryptocurrencies__content--item__data > div > h2{
+        font-size: 1.4rem;
+        padding-left: 1rem;
+        padding-right: 5px;
+    }
+    .popular-cryptocurrencies__content--item__data > div > span{
+        font-size:1.3rem;
+    }
 }
